--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -15,8 +15,6 @@
         <link href="{{ asset('bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
         <!-- Material Design Bootstrap -->
         <link href="{{ asset('bootstrap/css/mdb.min.css') }}" rel="stylesheet">
-        <!-- Your custom styles (optional) -->
-        <link href="{{ asset('bootstrap/css/style.css') }}" rel="stylesheet">
     {% endblock %}
 </head>
 <body>
@@ -100,7 +98,7 @@
         <!-- Bootstrap core JavaScript -->
         <script type="text/javascript" src="{{ asset('bootstrap/js/bootstrap.min.js') }}"></script>
         <!-- MDB core JavaScript -->
-        <script type="text/javascript" src="{{ asset('bootstrap/js/mdb.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bootstrap/js/mdb.js') }}"></script>
     {% endblock %}
     </body>
 </html>
