--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,14 +30,47 @@
                     <label class="form-check-label" for="rememberMe"> Remember me</label>
                 </div>
 
-                <input type="hidden" name="_csrf_token"
-                       value="{{ csrf_token('authenticate') }}"
-                >
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-                <button class="btn btn-lg btn-info" type="submit">
-                    Sign in
+                <button class="btn grey lighten-2 btn-md mt-4" type="submit">
+                    Connexion
                 </button>
             </form>
+
+            <div class="mt-3">
+                <a data-toggle="modal" data-target="#resetPassWord" class="indigo-text">Mot de passe
+                    oublié?</a>
+
+                <div class="modal fade" id="resetPassWord" tabindex="-1" role="dialog"
+                     aria-labelledby="myModalLabel"
+                     aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header grey lighten-4">
+                                <h4 class="modal-title">Mot de passe oublié ?</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body mx-3">
+                                <form method="post" action="{{ path('send_reset_psw') }}">
+                                    <div class="form-group">
+                                        <label for="email">Veuillez saisir votre mail, un message vous sera
+                                            envoyé!</label>
+                                        <input type="text" name="email" id="email"
+                                               class="form-control"
+                                               required
+                                               autofocus>
+                                    </div>
+                                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                                    <button class="btn grey lighten-2 btn-md mt-4" type="submit">Envoyer
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
