Modification route pour réinitialisation mdp + ajout role IS_AUTHENTICATED_ANONYMOUSLY pour les routes préfixé de /password

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -53,7 +53,7 @@
                                 </button>
                             </div>
                             <div class="modal-body mx-3">
-                                <form method="post" action="{{ path('send_reset_psw') }}">
+                                <form method="post" action="{{ path('app_password_send_mail') }}">
                                     <div class="form-group">
                                         <label for="email">Veuillez saisir votre mail, un message vous sera
                                             envoyé!</label>
