--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -20,7 +20,7 @@
 <body>
     <header>
         <!--Navbar -->
-        <nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color">
+        <nav class="mb-1 navbar navbar-expand-lg navbar-dark light-blue darken-4">
             <img src="{{ asset('image/favicon.png') }}" alt="Bucket-List" class="img-fluid mr-2" width="64px" height="64px">
             <a class="navbar-brand" href="#">Sortir.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
@@ -57,7 +57,7 @@
                                      alt="avatar image">
                             {% endif %}
                         </a>
-                        <div class="dropdown-menu dropdown-menu-lg-right dropdown-default"
+                        <div class="dropdown-menu dropdown-menu-lg-right dropdown-info"
                              aria-labelledby="navbarDropdownMenuLink-55">
                                 <a class="dropdown-item" href="{{ path('participant_edit', {id: app.user.id}) }}" title="Sortir.com | Mon profil">Mon profil</a>
                                 <a class="dropdown-item" href="{{ path('app_logout') }}" title="Sortir.com | Se déconnecter">Se déconnecter</a>
@@ -86,7 +86,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="page-footer font-small default-color fixed-bottom">
+    <footer class="page-footer font-small light-blue darken-4 fixed-bottom">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">&copy {{"now"|date("Y")}} Sortir.com</div>
         <!-- Copyright -->
