--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -1,7 +1,142 @@
 {% extends 'layout.html.twig' %}
 
+
 {% block body %}
-    <h1>THOMAS</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h4>
+                    Filtrer les sorties
+                </h4>
+                <div class="row">
+                    <div class="col-md-6 select-outline">
+
+                        <select class="mdb-select md-form md-outline colorful-select dropdown-primary">
+                            <option value="" disabled selected>Choisi ton campus</option>
+                            <option value="1">test1</option>
+                            <option value="1">test2</option>
+                            <option value="1">test3</option>
+                            <option value="1">test4</option>
+                        </select>
+                        <label>Campus</label>
+
+                    </div>
+                </div>
+
+
+                    <div class="md-form">
+                        <i class="fas fa-search prefix"></i>
+                        <input type="text" id="searchSortie" class="form-control">
+                        <label for="searchSortie">Rechercher une sortie</label>
+                    </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <div class="md-form mb-0">
+                                <div class="md-form">
+                                    <i class="far fa-calendar-alt prefix"></i>
+                                    <input type="date" id="date1" class="form-control">
+                                    <label for="date1">Date début</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <div class="md-form mb-0">
+                                <div class="md-form">
+                                    <i class="far fa-calendar-alt prefix"></i>
+                                    <input type="date" id="date2" class="form-control">
+                                    <label for="date2">Date fin</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-6">
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="inscritAdmin" >
+                    <label class="form-check-label" for="inscritAdmin">Sorties dont je suis l'organisateur</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="inscritKO" >
+                    <label class="form-check-label" for="inscritKO">Sorties auxquelles je suis inscrit/e</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="inscritOk" >
+                    <label class="form-check-label" for="inscritOk">Sorties auxquelles je ne suis pas inscrit/e</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="sortieEnd" >
+                    <label class="form-check-label" for="sortieEnd">Sorties passées</label>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <table id="sorties_data" class="table table-striped table-bordered "  width="100%">
+        <thead class="blue lighten-4">
+        <tr>
+            <th class='th-sm center'>Nom de la sortie</th>
+            <th class='th-sm center'>Date de la sortie</th>
+            <th class='th-sm center'>Clôture</th>
+            <th class='th-sm center'>Inscrits/places</th>
+            <th class='th-sm center'>Etat</th>
+            <th class='th-sm center'>Inscrit</th>
+            <th class='th-sm center'>Organisateur</th>
+            <th class='th-sm center'>Actions</th>
+        </tr>
+        </thead>
+    </table>
+    <button class="btn btn-primary btn-rounded"><i class="fas fa-plus mr-1"></i> Créer une sortie</button>
+
+    <script>
+        $(document).ready(function(){
+            $('.mdb-select').materialSelect();
+            $('.select-wrapper.md-form.md-outline input.select-dropdown').bind('focus blur', function () {
+                $(this).closest('.select-outline').find('label').toggleClass('active');
+                $(this).closest('.select-outline').find('.caret').toggleClass('active');
+            });
+
+            var dataTable = $('#sorties_data').DataTable({
+                "columnDefs": [
+
+                    // These are the column name variables that will be sent to the server
+                    { "name": "nameSortie",   "targets": 0 },
+                    { "name": "dateSortie",   "targets": 1 },
+                    { "name": "cloture",  "targets": 2 },
+                    { "name": "nbinscrit",  "targets": 3 },
+                    { "name": "etat",  "targets": 4 },
+                    { "name": "inscrit",  "targets": 5 },
+                    { "name": "organisateur",  "targets": 6 },
+                    { "name": "actions",  "targets": 7 },
+                ],
+                "order" : [],
+                "processing": true,
+                "serverSide": true,
+                "paging": false, // false to disable sorting (or any other option)
+                "searching": true,
+                "scrollY": "250vh",
+                "scrollCollapse": true,
+                "drawCallback" : function( settings ) {
+                    gestion_tab();
+                },
+                "language": {
+                    "search": "Rechercher",
+                    "infoEmpty": "Affichage de l'élément",
+                    "info": "Affichage de l'élément _START_ à _END_ sur _TOTAL_ élément(s)",
+                },
+                {#"ajax" : {#}
+                {#    url:"{{ path('') }}",#}
+                {#    type:"POST"#}
+                {#}#}
+            });
+        });
+    </script>
+
+
 
 {% endblock %}
-
