--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -20,24 +20,28 @@
     {% endblock %}
 </head>
 <body>
-    <header>
-        <!--Navbar -->
-        <nav class="mb-1 navbar navbar-expand-lg navbar-dark light-blue darken-4">
-            <img src="{{ asset('image/favicon.png') }}" alt="Bucket-List" class="img-fluid mr-2" width="64px" height="64px">
-            <a class="navbar-brand" href="#">Sortir.com</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
-                    aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-                <ul class="navbar-nav mr-auto">
-                    {% if is_granted("ROLE_USER") %}
-                        <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('app_homepage') }}" title="Sortir.com | Accueil">Accueil
-                                <span class="sr-only">(current)</span>
-                            </a>
+<header>
+    <!--Navbar -->
+    <nav class="mb-1 navbar navbar-expand-lg navbar-dark light-blue darken-4">
+        <img src="{{ asset('image/favicon.png') }}" alt="Bucket-List" class="img-fluid mr-2" width="64px" height="64px">
+        <a class="navbar-brand" href="#">Sortir.com</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
+                aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
+            <ul class="navbar-nav mr-auto">
+                {% if is_granted("ROLE_USER") %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_homepage') }}" title="Sortir.com | Accueil">Accueil
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    {% if is_granted("ROLE_ADMIN") %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_admin_utilisateurs') }}"
+                               title="Sortir.com | Utilisateur">Utilisateurs</a>
                         </li>
-                        {% if is_granted("ROLE_ADMIN") %}
                         <li class="nav-item">
                             <a class="nav-link" href="#" title="Sortir.com | Villes">Villes</a>
                         </li>
@@ -61,9 +65,13 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-lg-right dropdown-info"
                              aria-labelledby="navbarDropdownMenuLink-55">
-                                <a class="dropdown-item" href="{{ path('participant_edit', {id: app.user.id}) }}" title="Sortir.com | Mon profil">Mon profil</a>
-                                <a class="dropdown-item" href="{{ path('app_logout') }}" title="Sortir.com | Se déconnecter">Se déconnecter</a>
-                         </div>
+                            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                                <a class="dropdown-item" href="{{ path('participant_edit', {id: app.user.id}) }}"
+                                   title="Sortir.com | Mon profil">Mon profil</a>
+                                <a class="dropdown-item" href="{{ path('app_logout') }}"
+                                   title="Sortir.com | Se déconnecter">Se déconnecter</a>
+                            {% endif %}
+                        </div>
                     </li>
                 </ul>
                 {% endif %}
@@ -73,27 +81,27 @@
     </header>
     <main>
 
-        {# read and display all flash messages #}
-        {% for label, messages in app.flashes %}
-            {% for message in messages %}
-                <div class="flash-{{ label }}">
-                    {{ message|raw }}
-                </div>
-            {% endfor %}
+    {# read and display all flash messages #}
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message|raw }}
+            </div>
         {% endfor %}
+    {% endfor %}
 
         <div class="container-fluid mt-5">
             {% block body %} {% endblock %}
         </div>
     </main>
 
-    <!-- Footer -->
-    <footer class="page-footer font-small light-blue darken-4 fixed-bottom">
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">&copy {{"now"|date("Y")}} Sortir.com</div>
-        <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
+<!-- Footer -->
+<footer class="page-footer font-small light-blue darken-4 fixed-bottom">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">&copy {{ "now"|date("Y") }} Sortir.com</div>
+    <!-- Copyright -->
+</footer>
+<!-- Footer -->
 
     {% block javascripts %}
         <!-- SCRIPTS -->
