--- a/templates/participant/edit.html.twig
+++ b/templates/participant/edit.html.twig
@@ -176,7 +176,7 @@
                         <button class="btn btn-primary my-4 btn-block" type="submit">Enregistrer</button>
                     </div>
                     <div class="col">
-                        <button class="btn btn-default my-4 btn-block" type="button">Annuler</button>
+                        <button class="btn btn-default my-4 btn-block" type="button" onclick="history.go(-1)">Annuler</button>
                     </div>
                 </div>
 
