--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -16,6 +16,9 @@
         <!-- Material Design Bootstrap -->
         <link href="{{ asset('bootstrap/css/mdb.min.css') }}" rel="stylesheet">
     {% endblock %}
+    {% block js %}
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    {% endblock %}
 </head>
 <body>
     <header>
