--- a/templates/sortie/new-edit.html.twig
+++ b/templates/sortie/new-edit.html.twig
@@ -1,18 +1,57 @@
-<!DOCTYPE html>
-<html>
+{% extends 'layout.html.twig' %}
 
-<body>
+{% block js %}
+
+    {{  parent() }}
+    <script src={{ asset('js/sortie.js') }}></script>
+{% endblock %}
+
+
+
 {% block body %}
 
 
 
 
-
-
+<div class="card-body">
     {{ form(form) }}
+</div>
 
+
+    <script>
+        var $ville = $('#sortie_ville');
+        var dateHeureDebut= $('#sortie_dateHeureDebut');
+        var dateLimiteInscription= $('#sortie_dateLimiteInscription');
+        // When ville gets selected ...
+        $ville.change(function() {
+            // ... retrieve the corresponding form.
+            var $form = $(this).closest('form');
+            // Simulate form data, but only include the selected ville value.
+            var data = {};
+            data[$ville.attr('name')] = $ville.val();
+            data[dateHeureDebut.attr('name')] =dateHeureDebut.val();
+            data[dateLimiteInscription.attr('name')] =dateLimiteInscription.val();
+            // Submit data via AJAX to the form's action path.
+            $.ajax({
+                url : $form.attr('action'),
+                type: $form.attr('method'),
+                data : data,
+                success: function(html) {
+                    // Replace current position field ...
+                    console.log('succes');
+                    $('#sortie_lieu').replaceWith(
+                        // ... with the returned one from the AJAX response.
+                        $(html).find('#sortie_lieu')
+                    );
+                    // Position field now displays the appropriate positions.
+                }
+            });
+        });
+
+        console.log(data);
+    </script>
 
 {% endblock %}
 {% block javascripts %}{% endblock %}
-</body>
-</html>
+
+
