--- a/templates/admin/listUtilisateurs.html.twig
+++ b/templates/admin/listUtilisateurs.html.twig
@@ -20,8 +20,11 @@
                 </div>
                 <div class="modal-body mx-3">
                     <form method="post" action="{{ path('app_admin_import_users') }}" enctype="multipart/form-data">
-                        <div class="md-form">
-                            <input type="file" name="csvFile" id="csvFile" accept=".csv"/>
+                        <div class="input-file-container">
+                            <input class="input-file" type="file" name="csvFile" id="csvFile" accept=".csv"/>
+                            <label for="my-file" class="input-file-trigger" tabindex="0">
+                                Choisir une liste d'utilisateurs (.csv)
+                            </label>
                         </div>
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         <button class="btn grey lighten-2 btn-md mt-4" type="submit">Importer
@@ -56,4 +59,31 @@
         {% endfor %}
         </tbody>
     </table>
+
+    <style>
+        /* styles de base si JS est activé */
+        .input-file-container {
+            position: relative;
+        }
+
+        .input-file-trigger {
+            display: block;
+            padding: 14px 45px;
+            background: #4285F4;
+            color: #fff;
+            font-size: 1em;
+            transition: all .4s;
+            cursor: pointer;
+        }
+
+        .input-file {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 225px;
+            padding: 14px 0;
+            opacity: 0;
+            cursor: pointer;
+        }
+    </style>
 {% endblock %}
